--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
             <artifactId>xwork</artifactId>
             <version>2.1.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.mongodb/bson -->
         <!--        <dependency>-->
         <!--            <groupId>org.mongodb</groupId>-->
